k8s/base/prometheus/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus

  template:
    metadata:
      labels:
        app: prometheus

    spec:
      # UID Prometheus
      securityContext:
        runAsUser: 65534
        fsGroup: 65534
      containers:
        - name: prometheus
          image: prom/prometheus:v2.51.2
          # Présent mais c'est la valeur par défaut car l'image demandé n'est pas latest
          imagePullPolicy: IfNotPresent

          resources:
            requests:
              memory: "512Mi"  # Ce qu'il demande au démarrage
              cpu: "300m"      # 0.3 vCPU
            limits:
              memory: "512Mi"  # Le plafond à ne pas dépasser
              cpu: "500m"      # 0.5 vCPU maximum

          args:
            - --config.file=/etc/prometheus/prometheus.yml
            - --storage.tsdb.path=/prometheus
            - --web.route-prefix=/prometheus
            - --web.external-url=http://prometheus:9090/prometheus/

          ports:
            - containerPort: 9090

          volumeMounts:
            - name: config
              mountPath: /etc/prometheus/prometheus.yml
              subPath: prometheus.yml

            - name: rules
              mountPath: /etc/prometheus/rules

            - name: data
              mountPath: /prometheus

      volumes:
        - name: config
          configMap:
            name: prometheus-config

        - name: rules
          configMap:
            name: prometheus-rules

        - name: data
          persistentVolumeClaim:
            claimName: prometheus-pvc
