k8s/base/prometheus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  annotations:
    # 1. Réécriture du chemin (pour enlever /mlflow)
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    # 2. Rate Limiting (Équivalent de zone=apilimit rate=10r/s burst=50)
    # limit-rps: 10 correspond au "rate=10r/s"
    # limit-burst-multiplier: 50 correspond au "burst=50"
    # nodelay est activé par défaut dans ingress-nginx
    nginx.ingress.kubernetes.io/limit-rps: "10"
    # 2 car il fait 2*rps = 20 (comme dans nginx)
    nginx.ingress.kubernetes.io/limit-burst-multiplier: "2"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /prometheus(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
